# project-euler-problem764

./: .gitignore  CMakeLists.txt  code.py
src/: main.cu  result.cu  result.cuh  utils.cu  utils.cuh
src/cpu/: problem764_cpu.cu  problem764_cpu.cuh
src/cuda/: cuda_vector.cuh  kernels.cuh  problem764_cuda.cu  problem764_cuda.cuh
